fixed some endpoints and added profile